--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
 			//determine if numbers are amicable 
 			if (sum1 == num2 && sum2 == num1) {
-				document.getElementById("result").innerHTML = "The numbers: " + num1 + " and " + num2 + " are amicable.";
+				document.getElementById("result").innerHTML = "The numbers: " + num1 + " and " + num2 + " <u>are amicable.</u>";
 			}
 			else {
-				document.getElementById("result").innerHTML = "The numbers: " + num1 + " and " + num2 + " are not amicable."; 
+				document.getElementById("result").innerHTML = "The numbers: " + num1 + " and " + num2 + " <u>are not amicable.</u>"; 
 			}
 
 			//list each numbers' factors
